[metadata]
name = time_unit
# Let setuptools-scm handle version
description = Representing years, quarters, months, weeks and days as integers
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hapytex/time_unit/
author = Willem Van Onsem
author_email = yourfriends@hapytex.eu
license = BSD-3-Clause
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
[options.packages.find]
include = time_unit*
